--- a/cdss_1/cdss_1/analysis/sus_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/sus_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,15 @@
     "from scipy.stats import f_oneway, kruskal\n",
     "import statsmodels.api as sm\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2380,7 +2383,7 @@
        "40    Slightly familiar  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2457,6 +2460,439 @@
    ],
    "source": [
     "anover_kw_test(sus_demographics_df, 'score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "from scipy.stats import f_oneway, kruskal, shapiro, levene\n",
+    "from statsmodels.stats.multitest import multipletests\n",
+    "\n",
+    "def anover_kw_test_correction(df, column, correction_method='holm'):\n",
+    "    # Test for normality (Shapiro-Wilk test on residuals)\n",
+    "    model = smf.ols(f\"{column} ~ user_archetype + age_new + sex_new + medical_speciality_new + grade_new + ai_familiarity_new\", data=df).fit()\n",
+    "    shapiro_stat, shapiro_p_value = shapiro(model.resid)\n",
+    "\n",
+    "    # Levene's test for homogeneity of variances across different variables\n",
+    "    levene_p_values = {}\n",
+    "\n",
+    "    independent_vars = ['user_archetype', 'age_new', 'sex_new', 'medical_speciality_new', 'grade_new', 'ai_familiarity_new']\n",
+    "    \n",
+    "    for var in independent_vars:\n",
+    "        groups = [df[column][df[var] == group] for group in df[var].dropna().unique()]\n",
+    "        levene_stat, levene_p = levene(*groups)\n",
+    "        levene_p_values[var] = levene_p\n",
+    "\n",
+    "    # Determine whether ANOVA or Kruskal-Wallis should be used\n",
+    "    if shapiro_p_value >= 0.05 and all(p >= 0.05 for p in levene_p_values.values()):\n",
+    "        anova_bool = True\n",
+    "    else:\n",
+    "        anova_bool = False\n",
+    "\n",
+    "    print('\\n')\n",
+    "    print(f\"ANOVA Assumption Met: {anova_bool}\")\n",
+    "    print('\\n')\n",
+    "\n",
+    "    # Collect results for correction\n",
+    "    results = []\n",
+    "    valid_p_values = []\n",
+    "    p_indices = []  # Keep track of indices where valid p-values exist\n",
+    "    \n",
+    "    # Perform Collective ANOVA\n",
+    "    if anova_bool:\n",
+    "        print('Collective ANOVA')\n",
+    "        model = smf.ols(f\"{column} ~ user_archetype + age_new + sex_new + medical_speciality_new + grade_new + ai_familiarity_new\", data=df).fit()\n",
+    "        aov_table = sm.stats.anova_lm(model, typ=2)\n",
+    "\n",
+    "        for index, row in aov_table.iterrows():\n",
+    "            sum_sq, df_value, f_value, pr_f = row\n",
+    "            results.append({'variable': index, 'test': 'ANOVA', 'statistic': f_value, 'p_value': pr_f})\n",
+    "            if not np.isnan(pr_f):  # Only add valid p-values\n",
+    "                valid_p_values.append(pr_f)\n",
+    "                p_indices.append(len(results) - 1)\n",
+    "\n",
+    "    # Function to perform ANOVA\n",
+    "    def perform_anova(df, group_var):\n",
+    "        groups = [df[column][df[group_var] == group] for group in df[group_var].dropna().unique()]\n",
+    "        stat, p_value = f_oneway(*groups)\n",
+    "        return stat, p_value\n",
+    "\n",
+    "    # Function to perform Kruskal-Wallis H test\n",
+    "    def perform_kruskal(df, group_var):\n",
+    "        groups = [df[column][df[group_var] == group] for group in df[group_var].dropna().unique()]\n",
+    "        stat, p_value = kruskal(*groups)\n",
+    "        return stat, p_value\n",
+    "\n",
+    "    print('\\nIndependent Tests')\n",
+    "    for var in independent_vars:\n",
+    "        if anova_bool:\n",
+    "            stat, p_value = perform_anova(df, var)\n",
+    "            test_name = 'ANOVA'\n",
+    "        else:\n",
+    "            stat, p_value = perform_kruskal(df, var)\n",
+    "            test_name = 'Kruskal-Wallis'\n",
+    "        \n",
+    "        results.append({'variable': var, 'test': test_name, 'statistic': stat, 'p_value': p_value})\n",
+    "        if not np.isnan(p_value):  # Only add valid p-values\n",
+    "            valid_p_values.append(p_value)\n",
+    "            p_indices.append(len(results) - 1)\n",
+    "\n",
+    "    # Convert results to DataFrame\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "\n",
+    "    # Apply multiple comparisons correction\n",
+    "    if valid_p_values:  # Ensure there are valid p-values to correct\n",
+    "        reject, corrected_p_values, _, _ = multipletests(valid_p_values, alpha=0.05, method=correction_method)\n",
+    "\n",
+    "        # Insert corrected p-values and rejection decision at correct indices\n",
+    "        for idx, corrected_p, reject_flag in zip(p_indices, corrected_p_values, reject):\n",
+    "            results_df.at[idx, 'p_corrected'] = corrected_p\n",
+    "            results_df.at[idx, 'reject'] = reject_flag\n",
+    "\n",
+    "    # Fill missing corrected p-values with NaN\n",
+    "    results_df['p_corrected'].fillna(np.nan, inplace=True)\n",
+    "    results_df['reject'].fillna(False, inplace=True)\n",
+    "\n",
+    "    # Print results\n",
+    "    for _, row in results_df.iterrows():\n",
+    "        print(f\"{row['test']} for {row['variable']}: Statistic={row['statistic']:.4f}, p-value={row['p_value']:.4f}, Corrected p-value={row['p_corrected']:.4f}\")\n",
+    "        if row['reject']:\n",
+    "            print(f\"  -> The differences in {row['variable']} remain statistically significant after correction.\\n\")\n",
+    "        else:\n",
+    "            print(f\"  -> The differences in {row['variable']} are no longer statistically significant after correction.\\n\")\n",
+    "\n",
+    "    return results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "ANOVA Assumption Met: True\n",
+      "\n",
+      "\n",
+      "Collective ANOVA\n",
+      "\n",
+      "Independent Tests\n",
+      "ANOVA for user_archetype: Statistic=2.5062, p-value=0.1250, Corrected p-value=1.0000\n",
+      "  -> The differences in user_archetype are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for age_new: Statistic=1.8648, p-value=0.1457, Corrected p-value=1.0000\n",
+      "  -> The differences in age_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for sex_new: Statistic=0.0960, p-value=0.7590, Corrected p-value=1.0000\n",
+      "  -> The differences in sex_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for medical_speciality_new: Statistic=1.5597, p-value=0.2221, Corrected p-value=1.0000\n",
+      "  -> The differences in medical_speciality_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for grade_new: Statistic=0.3548, p-value=0.5564, Corrected p-value=1.0000\n",
+      "  -> The differences in grade_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for ai_familiarity_new: Statistic=1.2627, p-value=0.3069, Corrected p-value=1.0000\n",
+      "  -> The differences in ai_familiarity_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for Residual: Statistic=nan, p-value=nan, Corrected p-value=nan\n",
+      "  -> The differences in Residual are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for user_archetype: Statistic=1.6967, p-value=0.2004, Corrected p-value=1.0000\n",
+      "  -> The differences in user_archetype are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for age_new: Statistic=1.1258, p-value=0.3597, Corrected p-value=1.0000\n",
+      "  -> The differences in age_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for sex_new: Statistic=0.4225, p-value=0.5195, Corrected p-value=1.0000\n",
+      "  -> The differences in sex_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for medical_speciality_new: Statistic=0.8730, p-value=0.4638, Corrected p-value=1.0000\n",
+      "  -> The differences in medical_speciality_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for grade_new: Statistic=0.2165, p-value=0.6443, Corrected p-value=1.0000\n",
+      "  -> The differences in grade_new are no longer statistically significant after correction.\n",
+      "\n",
+      "ANOVA for ai_familiarity_new: Statistic=0.3616, p-value=0.7811, Corrected p-value=1.0000\n",
+      "  -> The differences in ai_familiarity_new are no longer statistically significant after correction.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12748/849359908.py:87: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  results_df.at[idx, 'reject'] = reject_flag\n"
+     ]
+    }
+   ],
+   "source": [
+    "anova_kw_results = anover_kw_test_correction(sus_demographics_df, 'score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reject\n",
+       "False     13\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "p_corrected\n",
+       "1.0            12\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>test</th>\n",
+       "      <th>statistic</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>p_corrected</th>\n",
+       "      <th>reject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [variable, test, statistic, p_value, p_corrected, reject]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>test</th>\n",
+       "      <th>statistic</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>p_corrected</th>\n",
+       "      <th>reject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>user_archetype</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>2.506228</td>\n",
+       "      <td>0.125042</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>age_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>1.864787</td>\n",
+       "      <td>0.145659</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sex_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.096032</td>\n",
+       "      <td>0.759023</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>medical_speciality_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>1.559716</td>\n",
+       "      <td>0.222052</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grade_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.354797</td>\n",
+       "      <td>0.556371</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ai_familiarity_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>1.262700</td>\n",
+       "      <td>0.306923</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Residual</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>user_archetype</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>1.696704</td>\n",
+       "      <td>0.200359</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>age_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>1.125798</td>\n",
+       "      <td>0.359701</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>sex_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.422464</td>\n",
+       "      <td>0.519521</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>medical_speciality_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.872983</td>\n",
+       "      <td>0.463830</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>grade_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.216521</td>\n",
+       "      <td>0.644291</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ai_familiarity_new</td>\n",
+       "      <td>ANOVA</td>\n",
+       "      <td>0.361557</td>\n",
+       "      <td>0.781100</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  variable   test  statistic   p_value  p_corrected  reject\n",
+       "0           user_archetype  ANOVA   2.506228  0.125042          1.0   False\n",
+       "1                  age_new  ANOVA   1.864787  0.145659          1.0   False\n",
+       "2                  sex_new  ANOVA   0.096032  0.759023          1.0   False\n",
+       "3   medical_speciality_new  ANOVA   1.559716  0.222052          1.0   False\n",
+       "4                grade_new  ANOVA   0.354797  0.556371          1.0   False\n",
+       "5       ai_familiarity_new  ANOVA   1.262700  0.306923          1.0   False\n",
+       "6                 Residual  ANOVA        NaN       NaN          NaN   False\n",
+       "7           user_archetype  ANOVA   1.696704  0.200359          1.0   False\n",
+       "8                  age_new  ANOVA   1.125798  0.359701          1.0   False\n",
+       "9                  sex_new  ANOVA   0.422464  0.519521          1.0   False\n",
+       "10  medical_speciality_new  ANOVA   0.872983  0.463830          1.0   False\n",
+       "11               grade_new  ANOVA   0.216521  0.644291          1.0   False\n",
+       "12      ai_familiarity_new  ANOVA   0.361557  0.781100          1.0   False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anova_kw_results[['reject']].value_counts()\n",
+    "anova_kw_results[['p_corrected']].value_counts()\n",
+    "anova_kw_results[anova_kw_results['p_corrected'] < 0.5]\n",
+    "anova_kw_results"
    ]
   },
   {
