--- a/cdss_1/cdss_1/analysis/decision_analysis.ipynb
+++ b/cdss_1/cdss_1/analysis/decision_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "[504 rows x 11 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1113,8 +1113,8 @@
       "                                                                                 Estimating Equations   Max. cluster size:                  42\n",
       "Family:                                                                                      Binomial   Mean cluster size:                42.0\n",
       "Dependence structure:                                                                    Independence   Num. iterations:                     2\n",
-      "Date:                                                                                Mon, 24 Feb 2025   Scale:                           1.000\n",
-      "Covariance type:                                                                               robust   Time:                         12:45:53\n",
+      "Date:                                                                                Mon, 03 Mar 2025   Scale:                           1.000\n",
+      "Covariance type:                                                                               robust   Time:                         14:27:30\n",
       "============================================================================================\n",
       "                               coef    std err          z      P>|z|      [0.025      0.975]\n",
       "--------------------------------------------------------------------------------------------\n",
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "view_categorical.L   0.01  **  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,6 +1293,153 @@
     "\n",
     "# Ensure your 'decision' is binary (0/1) and 'vignette' indicates the grouping variable.\n",
     "model = Lmer('switch_choice_categorical ~ view_categorical + (1|patient)', data=all_choices, family='binomial')\n",
+    "model.fit()  \n",
+    "#print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "boundary (singular) fit: see help('isSingular') \n",
+      "\n",
+      "Linear mixed model fit by maximum likelihood  ['lmerMod']\n",
+      "Formula: switch_choice_categorical~view_categorical+(1|patient)+(view_categorical|user_id)\n",
+      "\n",
+      "Family: binomial\t Inference: parametric\n",
+      "\n",
+      "Number of observations: 504\t Groups: {'user_id': 42.0, 'patient': 12.0}\n",
+      "\n",
+      "Log-likelihood: -229.508 \t AIC: 471.017\n",
+      "\n",
+      "Random effects:\n",
+      "\n",
+      "                       Name    Var    Std\n",
+      "user_id         (Intercept)  0.974  0.987\n",
+      "user_id  view_categorical.L  0.006  0.075\n",
+      "patient         (Intercept)  5.748  2.397\n",
+      "\n",
+      "                 IV1                 IV2  Corr\n",
+      "user_id  (Intercept)  view_categorical.L  -1.0\n",
+      "\n",
+      "Fixed effects:\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wb1115/anaconda3/envs/cdss/lib/python3.10/site-packages/pymer4/models/Lmer.py:733: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  ran_vars = ran_vars.applymap(\n",
+      "/home/wb1115/anaconda3/envs/cdss/lib/python3.10/site-packages/pymer4/models/Lmer.py:744: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  ran_corrs = ran_corrs.applymap(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estimate</th>\n",
+       "      <th>2.5_ci</th>\n",
+       "      <th>97.5_ci</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>OR</th>\n",
+       "      <th>OR_2.5_ci</th>\n",
+       "      <th>OR_97.5_ci</th>\n",
+       "      <th>Prob</th>\n",
+       "      <th>Prob_2.5_ci</th>\n",
+       "      <th>Prob_97.5_ci</th>\n",
+       "      <th>Z-stat</th>\n",
+       "      <th>P-val</th>\n",
+       "      <th>Sig</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>(Intercept)</th>\n",
+       "      <td>0.760</td>\n",
+       "      <td>-0.663</td>\n",
+       "      <td>2.182</td>\n",
+       "      <td>0.726</td>\n",
+       "      <td>2.138</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>8.865</td>\n",
+       "      <td>0.681</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>0.899</td>\n",
+       "      <td>1.047</td>\n",
+       "      <td>0.295</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>view_categorical.L</th>\n",
+       "      <td>-0.503</td>\n",
+       "      <td>-0.857</td>\n",
+       "      <td>-0.149</td>\n",
+       "      <td>0.181</td>\n",
+       "      <td>0.604</td>\n",
+       "      <td>0.424</td>\n",
+       "      <td>0.861</td>\n",
+       "      <td>0.377</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>0.463</td>\n",
+       "      <td>-2.786</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>**</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Estimate  2.5_ci  97.5_ci     SE     OR  OR_2.5_ci  \\\n",
+       "(Intercept)            0.760  -0.663    2.182  0.726  2.138      0.516   \n",
+       "view_categorical.L    -0.503  -0.857   -0.149  0.181  0.604      0.424   \n",
+       "\n",
+       "                    OR_97.5_ci   Prob  Prob_2.5_ci  Prob_97.5_ci  Z-stat  \\\n",
+       "(Intercept)              8.865  0.681        0.340         0.899   1.047   \n",
+       "view_categorical.L       0.861  0.377        0.298         0.463  -2.786   \n",
+       "\n",
+       "                    P-val Sig  \n",
+       "(Intercept)         0.295      \n",
+       "view_categorical.L  0.005  **  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymer4.models import Lmer\n",
+    "\n",
+    "# Ensure your 'decision' is binary (0/1) and 'vignette' indicates the grouping variable.\n",
+    "model = Lmer('switch_choice_categorical ~ view_categorical + (1|patient) + (view_categorical|user_id)', \n",
+    "             data=all_choices, \n",
+    "             family='binomial')\n",
     "model.fit()  \n",
     "#print(model.summary())"
    ]
